--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "pl8",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "fontface-loader": "^0.0.8",
     "gh-pages": "^3.1.0",
+    "node-fetch": "^2.6.1",
+    "qs": "^6.5.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
